# DarwinBox

./: .env  README.md  docker-compose.yml
k8s/: darwinbox-back-service.yaml  darwinbox-back.yaml  darwinbox-front-service.yaml  darwinbox-front.yaml  ingress.yaml  postgres-statefulset.yaml
services/back/: .env  Cargo.toml  Dockerfile
services/back/.sqlx/: query-35bb3f1b9705772411703aab3459f941d2aa25ad8d5150880bb97183f5443562.json  query-5fef8dd1931d2f652a7e704ecd2d92d35b63c0690546649964a89bb0659a9e3f.json  query-824e54676e7a2cb65298c5cec833af32de870bb2cc26dad375b289b09a02d53d.json  query-8473aa7bb536ce873b8e42f7f7553b6e0a92df1744f97bc49eca06852132bf6e.json  query-c981e32a6f1d2e0b71290b8bf47f26c87bf11e3139d543d7c49555e5d39a9251.json
services/back/migrations/: 20241107124659_init.down.sql  20241107124659_init.up.sql  20241108080530_unique_name_per_parent.down.sql  20241108080530_unique_name_per_parent.up.sql  20241108081330_idx_directories_parent_id.down.sql  20241108081330_idx_directories_parent_id.up.sql  20241108095416_notify_directory_change.down.sql  20241108095416_notify_directory_change.up.sql
services/back/src/: app_state.rs  main.rs
services/back/src/business_logic/: directories.rs  directory_node.rs  directory_tree_builder.rs  mod.rs
services/back/src/db/: directories.rs  directory_changes_listener.rs  mod.rs
services/back/src/handlers/: directories.rs  directory_changes.rs  mod.rs
services/front/: .env  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
services/front/src/: api.ts  (+2 more)
services/reverse_proxy/: Caddyfile
(+11 files in other folders)
